Testing java options